tests/outputs/Filter_020.out
Parse tree from tests/cases/Filter_020.inp:
Filter(9999)
  Expression(9999)
    ExpressionClause(9999)
      ExpressionPhrase(9999)
        Comparison(9999)
          PropertyFirstComparison(9999)
            Property(9999)
              Identifier(9999)
                LowercaseLetter(9999)
                  TOKEN_67(9999): "c", line: 1, col: 1
                LowercaseLetter(9999)
                  TOKEN_72(9999): "h", line: 1, col: 2
                LowercaseLetter(9999)
                  TOKEN_69(9999): "e", line: 1, col: 3
                LowercaseLetter(9999)
                  TOKEN_77(9999): "m", line: 1, col: 4
                LowercaseLetter(9999)
                  TOKEN_73(9999): "i", line: 1, col: 5
                LowercaseLetter(9999)
                  TOKEN_67(9999): "c", line: 1, col: 6
                LowercaseLetter(9999)
                  TOKEN_65(9999): "a", line: 1, col: 7
                LowercaseLetter(9999)
                  TOKEN_76(9999): "l", line: 1, col: 8
                LowercaseLetter(9999)
                  TOKEN_63(9999): "_", line: 1, col: 9
                LowercaseLetter(9999)
                  TOKEN_70(9999): "f", line: 1, col: 10
                LowercaseLetter(9999)
                  TOKEN_79(9999): "o", line: 1, col: 11
                LowercaseLetter(9999)
                  TOKEN_82(9999): "r", line: 1, col: 12
                LowercaseLetter(9999)
                  TOKEN_77(9999): "m", line: 1, col: 13
                LowercaseLetter(9999)
                  TOKEN_85(9999): "u", line: 1, col: 14
                LowercaseLetter(9999)
                  TOKEN_76(9999): "l", line: 1, col: 15
                LowercaseLetter(9999)
                  TOKEN_65(9999): "a", line: 1, col: 16
                Spaces(9999)
                  Space(9999)
                    TOKEN_1(9999): " ", line: 1, col: 17
            FuzzyStringOpRhs(9999)
              CONTAINS(9999)
                TOKEN_35(9999): "C", line: 1, col: 18
                TOKEN_47(9999): "O", line: 1, col: 19
                TOKEN_46(9999): "N", line: 1, col: 20
                TOKEN_52(9999): "T", line: 1, col: 21
                TOKEN_33(9999): "A", line: 1, col: 22
                TOKEN_41(9999): "I", line: 1, col: 23
                TOKEN_46(9999): "N", line: 1, col: 24
                TOKEN_51(9999): "S", line: 1, col: 25
                Spaces(9999)
                  Space(9999)
                    TOKEN_1(9999): " ", line: 1, col: 26
Error: in tests/cases/Filter_020.inp: line 1:
    unexpected token "S", expected """

chemical_formula CONTAINS STARTS "Al"
                          ^
